# AI-ML-Engineer_Krish_Monga_April2026-assignment2-

./: .gitignore  README.md  bootstrap_local.sh  requirements.txt
bug_fix_swarm/: __init__.py  __main__.py  cli.py  ledger.py  orchestrator.py  schemas.py
bug_fix_swarm/agents/: __init__.py  critic.py  fix_planner.py  log_analyst.py  reproduction.py  signal_curator.py  triage.py
bug_fix_swarm/tools/: __init__.py  log_parse.py  pytest_runner.py  rg_tool.py
inputs/: RELEASE_NOTES.md  app_logs.txt  bug_report.md
mini_repo/: README.md  pyproject.toml
mini_repo/src/bug_fix/: __init__.py  rolling.py
mini_repo/tests/: test_rolling_contract.py
output/: evidence_ledger.json  evidence_ledger.jsonl  evidence_ledger.yaml  investigation_report.json  investigation_report.yaml  proposed_fix.patch  repro_generated_warm_window.py
